# zenoh-flow

./: .gitignore  Cargo.toml  Jenkinsfile.Ubuntu.Focal.aarch64  Jenkinsfile.Ubuntu.Focal.x86_64  NOTICE.md  README.md  greetings.txt  justfile  rustfmt.toml  zenoh-flow-init.sh
cargo-zenoh-flow/: Cargo.toml
cargo-zenoh-flow/src/: error.rs  lib.rs  templates.rs  utils.rs
examples/: Cargo.toml  README.md  data-flow.yaml
examples/examples/file-writer/: file-writer.yaml
examples/examples/file-writer/src/: lib.rs
examples/examples/greetings-maker/: greetings-maker.yaml
examples/examples/greetings-maker/src/: lib.rs
examples/examples/period-miss-detector/: period-miss-detector.yaml
examples/examples/period-miss-detector/src/: lib.rs
examples/flows/: getting-started.yaml  period-miss-detector.yaml
zenoh-flow/: Cargo.toml  build.rs
zenoh-flow-commons/: Cargo.toml
zenoh-flow-commons/src/: configuration.rs  deserialize.rs  identifiers.rs  lib.rs  merge.rs  runtime.rs  shared_memory.rs  utils.rs  vars.rs
zenoh-flow-ctl/: Cargo.toml
zenoh-flow-ctl/src/: main.rs
zenoh-flow-daemon/: Cargo.toml
zenoh-flow-daemon/etc/: runtime.yaml  zenoh-daemon.json  zenoh-zf-router.json  zenoh.json
zenoh-flow-daemon/etc/extensions.d/: placeholder
zenoh-flow-daemon/resources/: zenoh-flow.service
zenoh-flow-daemon/resources/debian/: postinst  postrm
zenoh-flow-daemon/resources/rpm/: template.hbs
zenoh-flow-daemon/src/: configuration.rs  daemon.rs  lib.rs  main.rs  runtime.rs  selectors.rs  util.rs  work.rs  worker.rs
zenoh-flow-daemon/src/daemon/: configuration.rs  mod.rs  queryables.rs
zenoh-flow-daemon/src/instances/: abort.rs  create.rs  delete.rs  mod.rs  queries.rs  start.rs
zenoh-flow-daemon/src/queries/: mod.rs  runtime.rs  selectors.rs
zenoh-flow-daemon/src/queries/instances/: abort.rs  create.rs  delete.rs  mod.rs  start.rs
zenoh-flow-daemon/tests/: configuration.rs
zenoh-flow-daemon/var/: placeholder
zenoh-flow-derive/: Cargo.toml
zenoh-flow-derive/src/: lib.rs
zenoh-flow-examples/: Cargo.toml
zenoh-flow-examples/examples/: camera-source.rs  capture.rs  counter-source.rs  example-buzz.rs  example-buzz2.rs  example-buzz3.rs  example-fizz.rs  example-generic-sink.rs  example-generic-zenoh-sink.rs  example-op.rs  example-random-source.rs  example-select.rs  example-sink.rs  face-detection.rs  frame-concat.rs  generic-sink.rs  manual-source.rs  object-detection-dnn.rs  random-source.rs  send-and-store.rs  simple-pipeline.rs  sum-and-send.rs  video-file-source.rs  video-pipeline.rs  video-sink.rs  video_pipeline.yaml  zenoh-receiver.rs  zenoh-sender.rs  zenoh-sink.rs
zenoh-flow-examples/graphs/: car-pipeline-multi-runtime.yaml  dnn-object-detection-multi-runtime.yaml  dnn-object-detection.yaml  face-detection-multi-runtime.yaml  face_detection.yaml  fizz-buzz-multiple-runtimes.yaml  fizz_buzz_pipeline.yaml  random_source.yaml  simple_pipeline.yaml  stereo-car-camera-pipeline.yaml  video_pipeline.yaml  zface_detection.yaml  zvideo_pipeline.yaml
zenoh-flow-examples/src/: lib.rs
zenoh-flow-macros/: Cargo.toml
zenoh-flow-macros/examples/: noop.rs
zenoh-flow-macros/src/: lib.rs
zenoh-flow-plugin/: Cargo.toml  build.rs
zenoh-flow-plugin/etc/: zenoh-zf-plugin.json
zenoh-flow-plugin/src/: lib.rs
zenoh-flow-records/: Cargo.toml
zenoh-flow-records/src/: connectors.rs  dataflow.rs  io.rs  lib.rs  links.rs  nodes.rs  tests.rs
zenoh-flow-registry/: Cargo.toml
zenoh-flow-registry/etc/: registry.yaml
zenoh-flow-registry/src/: config.rs  lib.rs  registry.rs  templates.rs
zenoh-flow-runtime/: Cargo.toml
zenoh-flow-runtime/src/: instance.rs  lib.rs  runtime.rs  shared_memory.rs
zenoh-flow-runtime/src/loader/: configuration.rs  extensions.rs  mod.rs  uri.rs
zenoh-flow-runtime/src/runners/: connectors.rs  mod.rs
zenoh-flow-runtime/src/runners/builtin/: mod.rs
zenoh-flow-runtime/src/runtime/: builder.rs  load.rs  mod.rs
zenoh-flow-standalone-daemon/: Cargo.toml
zenoh-flow-standalone-daemon/src/: main.rs
zenoh-flow/examples/: example-buzz.rs  example-fizz.rs  example-generic-sink.rs  example-op.rs  example-random-source.rs  example-select.rs  example-sink.rs  example-source.rs  run-dataflow-record-replay.rs  runtime.rs  send-and-store.rs  simple_pipeline-add-pipeline.yaml  simple_pipeline.yaml  sum-and-send.rs
zenoh-flow/resources/debian/: zenoh-flow
zenoh-flow/resources/rpm/: zenoh-flow  zenoh-flow.spec
zenoh-flow/src/: error.rs  fifo.rs  graph.rs  lib.rs  link.rs  loader.rs  macros.rs  message.rs  operator.rs  runner.rs  stream.rs  traits.rs  types.rs  utils.rs  zfresult.rs
zenoh-flow/src/graph/: mod.rs  node.rs
zenoh-flow/src/io/: input.rs  mod.rs  output.rs
zenoh-flow/src/io/tests/: input-tests.rs  output-tests.rs  test_types.proto
zenoh-flow/src/model/: component.rs  connector.rs  dataflow.rs  deadline.rs  link.rs  loops.rs  mod.rs  node.rs  operator.rs  period.rs  registry.rs
zenoh-flow/src/model/dataflow/: descriptor.rs  flag.rs  mod.rs  record.rs  validator.rs
zenoh-flow/src/model/descriptor/: dataflow.rs  link.rs  mod.rs  validator.rs
zenoh-flow/src/model/record/: connector.rs  dataflow.rs  link.rs  mod.rs  node.rs
zenoh-flow/src/model/tests/: composite-nested.yml  (+1 more)
zenoh-flow/src/runtime/: connectors.rs  deadline.rs  loader.rs  loops.rs  message.rs  mod.rs  resources.rs  runner.rs  token.rs  worker_pool.rs
zenoh-flow/src/types/: configuration.rs  context.rs  io.rs  message.rs  mod.rs
zenoh-flow/src/utils/: hlc.rs  mod.rs
zenoh-flow/src/zfdata/: mod.rs
zenoh-flow/tests/: composition.rs  configuration.rs  data.rs  dataflow.rs  e2e_deadline.rs  fifo.rs  input_rule_drop.rs  input_rule_keep.rs  link.rs  local_deadline.rs  loop.rs  resources.rs  state.rs  topological-sort.rs  validator.rs
zenoh-flow/tests/types/: mod.rs
zenoh-plugin-zenoh-flow/: Cargo.toml
zenoh-plugin-zenoh-flow/src/: lib.rs
zfctl/: Cargo.toml
zfctl/.config/: zfclt-zenoh.json  zfctl-zenoh.json
zfctl/src/: daemon_command.rs  instance_command.rs  main.rs  run_local.rs  run_local_command.rs  runtime_command.rs  utils.rs
(+182 files in other folders)
