#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
members = [
  "cargo-zenoh-flow",
  "zenoh-flow",
  "zenoh-flow-commons",
  "zenoh-flow-daemon",
  "zenoh-flow-derive",
  "zenoh-flow-descriptors",
  "descriptors",
  "zenoh-flow-nodes",
  "zenoh-flow-plugin",
  "zenoh-flow-records",
  "zfctl",
  "examples",
]

[workspace.package]
authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
categories = ["network-programming"]
description = "Zenoh-Flow: a Zenoh-based data flow programming framework for computations that span from the cloud to the device."
edition = "2021"
homepage = "https://github.com/eclipse-zenoh/zenoh-flow"
license = " EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
version = "0.6.0-dev"

[workspace.dependencies]
anyhow = "1"
async-std = "1.12"
async-trait = "0.1.50"
base64 = "0.21"
clap = "4.0"
env_logger = "0.10"
flume = "0.11"
futures = "0.3.15"
git-version = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_cbor = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tracing = { version = "0.1", features = ["log"] }
uhlc = "0.6"
url = "2.2"
uuid = { version = "1.1", features = ["serde", "v4"] }
zenoh = { version = "0.7.2-rc" }
zenoh-collections = { version = "0.7.2-rc" }
zenoh-core = { version = "0.7.2-rc" }
zenoh-ext = { version = "0.7.2-rc" }
zenoh-flow-commons = { path = "./zenoh-flow-commons" }
zenoh-flow-descriptors = { path = "./zenoh-flow-descriptors" }
zenoh-flow-records = { path = "./zenoh-flow-records" }
zenoh-plugin-trait = { version = "0.7.2-rc", default-features = false }
zenoh-sync = { version = "0.7.2-rc" }
zenoh-util = { version = "0.7.2-rc" }
zrpc = { version = "0.7.0-alpha.1" }
zrpc-macros = { version = "0.7.0-alpha.2" }

[profile.dev]
debug = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
panic = "abort"
