[package]
name = "cargo-zenoh-flow"
version = "0.2.0"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.10.0", features = ["attributes"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master", optional = true}
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master", optional = true }
zenoh-flow = {path = "../zenoh-flow"}
clap = { version = "3.1", features = ["derive"] }
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
cargo_toml = "0.11"
toml = "0.5.8"
serde_yaml = {version = "0.8"}
serde_json = "1.0"
rand = { version = "0.8", optional =  true}
tinytemplate = "1.2"
colored = "2"


[[bin]]
name = "cargo-zenoh-flow"
path = "src/bin/main.rs"


[lib]
path = "src/lib.rs"

[features]

local_registry = ["zenoh","zenoh-util", "rand"]

default = []