##
## Copyright (c) 2022 ZettaScale Technology
##
## This program and the accompanying materials are made available under the
## terms of the Eclipse Public License 2.0 which is available at
## http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
## which is available at https://www.apache.org/licenses/LICENSE-2.0.
##
## SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
##
## Contributors:
##   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
##

[package]
name = "cargo-zenoh-flow"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
zenoh = { version = "=0.7.0-rc", optional = true}
zenoh-util = { version = "=0.7.0-rc", optional = true }
zenoh-flow = {path = "../zenoh-flow"}
clap = { version = "4.0", features = ["derive"] }
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
cargo_toml = "0.13"
toml = "0.5.8"
serde_yaml = {version = "0.9"}
serde_json = "1.0"
rand = { version = "0.8", optional =  true}
tinytemplate = "1.2"
colored = "2"


[[bin]]
name = "cargo-zenoh-flow"
path = "src/bin/main.rs"


[lib]
path = "src/lib.rs"

[features]

local_registry = ["zenoh","zenoh-util", "rand"]

default = []
