[package]
name = "zenoh-flow-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
description.workspace = true
license.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
prost = "0.11"
zenoh-flow = { path = "../zenoh-flow/" }

[[example]]
name = "greetings-maker"
path = "examples/greetings-maker/src/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "file-writer"
path = "examples/file-writer/src/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "period-miss-detector"
path = "examples/period-miss-detector/src/lib.rs"
crate-type = ["cdylib"]
