#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors = { workspace = true }
categories = { workspace = true }
description = "Internal crate for Zenoh-Flow."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-flow-commons"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
humantime = "2.1"
uuid = { workspace = true }
handlebars = "5.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
zenoh-keyexpr = { workspace = true }
zenoh-protocol = { workspace = true }
