[package]
name = "zenoh-flow-ctl"
version = "0.1.0"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = {path = "../zenoh-flow"}
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zrpc = { git = "https://github.com/atolab/zenoh-rpc.git", branch = "master" }
znrpc-macros = { git = "https://github.com/atolab/zenoh-rpc.git", branch = "master" }
async-std = { version = "=1.9.0", features = ["attributes"] }
structopt = "0.3.13"
clap = "2.33"
exitfailure = "0.5.1"
failure = "0.1.8"
prettytable-rs = "^0.8"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.13.0"
derive_more = "0.99.10"
semver = { version = "1.0.4", features = ["serde"]}
rand = "0.8.3"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.55"
serde-aux = "2.1.1"
log = "0.4"
env_logger = "0.9.0"
git-version = "0.3.4"

# Debian package configuration

[package.metadata.deb]
maintainer = "ADLINK Zenoh team <zenoh@adlink-labs.tech>"
copyright = "2021, ADLINK Technology Inc"
extended-description = "Eclipse Zenoh Flow CLI tool"
license-file = ["../LICENSE", "0"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/zenoh-flow-ctl", "/usr/bin/zenoh-flow-ctl", "755"],
]

# RPM package configuration

[package.metadata.rpm]
package = "zenoh-flow-ctl"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
zenoh-flow-ctl = { path = "/usr/bin/zenoh-flow-ctl" }