#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-flow-daemon"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ctrlc = { version = "1.2.0", features = ["stream"] }
async-std = { version = "=1.12.0", features = ["attributes"] }
async-trait = "0.1.50"
clap = { workspace = true, features = ["derive"] }
env_logger = "0.10.0"
flume = "0.10"
futures = "0.3.5"
git-version = "0.3"
hostname = "0.3.1"
log = "0.4"
machine-uid = "0.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = { version = "0.9" }
uhlc = "0.5.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
zenoh = { workspace = true }
zenoh-flow = { version = "0.6.0-dev", path = "../zenoh-flow" }
zenoh-util = { workspace = true }
zrpc = { workspace = true }
zrpc-macros = { workspace = true }

[[bin]]
name = "zenoh-flow-daemon"

# Debian package configuration

[package.metadata.deb]
assets = [
  # binary
  [
    "target/release/zenoh-flow-daemon",
    "/usr/bin/zenoh-flow-daemon",
    "755"
  ],
  # assets
  [
    "etc/extensions.d/placeholder",
    "/etc/zenoh-flow/extensions.d/placeholder",
    "644"
  ],
  [
    "etc/runtime.yaml",
    "/etc/zenoh-flow/runtime.yaml",
    "644"
  ],
  [
    "etc/zenoh-daemon.json",
    "/etc/zenoh-flow/zenoh-daemon.json",
    "644"
  ],
  [
     "etc/zenoh-zf-router.json",
    "/etc/zenoh-flow/zenoh-zf-router.json",
    "644"
  ],
  [
    "var/*",
    "/var/zenoh-flow",
    "644"
  ],
]
copyright = "2021 - 2023 ZettaScale Technology"
depends = "$auto"
extended-description = "Eclipse Zenoh Flow Daemon"
license-file = ["../LICENSE", "0"]
maintainer = "ZettaScale Zenoh Team, <zenoh@zettascale.tech>"
priority = "optional"
section = "utils"
revision = ""

conf-files = ["/etc/zenoh-flow/runtime.yaml"]

[package.metadata.deb.systemd-units]
unit-name = "zenoh-flow.service"
unit-scripts = "resources/"

# RPM package configuration

[package.metadata.rpm]
package = "zenoh-flow-daemon"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
zenoh-flow-daemon = { path = "/usr/bin/zenoh-flow-daemon" }

[package.metadata.rpm.files]
"../etc/extensions.d/placeholder" = { path = "/etc/zenoh-flow/extensions.d/placeholder", mode = "644" }
"../etc/runtime.yaml" = { path = "/etc/zenoh-flow/runtime.yaml", mode = "644" }
"../etc/zenoh--zf-router.json" = { path = "/etc/zenoh-flow/zenoh-zf-router.json", mode = "644" }
"../etc/zenoh-daemon.json" = { path = "/etc/zenoh-flow/zenoh-daemon.json", mode = "644" }
"../resources/zenoh-flow.service" = { path = "/lib/systemd/system/zenoh-flow.service" }
"../var/placeholder" = { path = "/var/zenoh-flow/placeholder" }
