#
# Copyright (c) 2021 - 2024 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors = { workspace = true }
categories = { workspace = true }
description = "The Zenoh-Flow daemon exposes a Zenoh-Flow runtime on Zenoh"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-flow-daemon"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
clap = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.30.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uhlc = { workspace = true }
uuid = { workspace = true }
zenoh = { workspace = true }
zenoh-flow-commons = { workspace = true }
zenoh-flow-descriptors = { workspace = true }
zenoh-flow-records = { workspace = true }
zenoh-flow-runtime = { workspace = true }

[features]
default = []
plugin = []

[dev-dependencies]
serde_yaml = { workspace = true }
zenoh-flow-runtime = { workspace = true, features = ["test-utils"] }
