#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zenoh-flow-derive"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# To build with debug on macros: RUSTFLAGS="-Z macro-backtrace"

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
futures = "0.3.5"
syn-serde = { version = "0.2", features = ["json"] }
syn = { version = "1.0.11", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.46"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
darling = "0.14"
Inflector = "0.11.4"
proc-macro-error = "1.0.4"


[dev-dependencies]
env_logger = "0.9"


[lib]
proc-macro = true


[package.metadata.workspaces]
independent = true
