#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-flow-derive"
readme.workspace = true
repository.workspace = true
version.workspace = true

# To build with debug on macros: RUSTFLAGS="-Z macro-backtrace"

[dependencies]
Inflector = "0.11.4"
async-std = { version = "=1.12.0", features = ["attributes"] }
darling = "0.14"
futures = "0.3.5"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.46"
quote = "1.0.2"
serde = { version = "1.0.55", features = ["derive"] }
serde_derive = "1.0.55"
syn = { version = "1.0.11", features = ["full"] }
syn-serde = { version = "0.2", features = ["json"] }

[dev-dependencies]
env_logger = "0.9"

[lib]
proc-macro = true
