#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-flow-derive"
readme.workspace = true
repository.workspace = true
version.workspace = true

# To build with debug on macros: RUSTFLAGS="-Z macro-backtrace"

[dependencies]
Inflector = "0.11.4"
async-std = { workspace = true, features = ["attributes"] }
darling = "0.20"
futures = { workspace = true }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0"
quote = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
syn = { version = "2", features = ["full"] }
syn-serde = { version = "0.3", features = ["json"] }

[dev-dependencies]
env_logger = { workspace = true }

[lib]
proc-macro = true
