[package]
name = "zenoh-flow-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { path = "../zenoh-flow" }
zenoh-flow-macros = {path = "../zenoh-flow-macros"}
env_logger = "0.8.3"
serde = { version = "1.0.55", features = ["derive"] }
opencv = "0.53.0"
async-std = { version = "=1.9.0", features = ["attributes"] }
typetag = "0.1"
log = "0.4"

[dev-dependencies]
rand = "0.8.0"
opencv = "0.53.0"
serde = { version = "1.0.55", features = ["derive"] }
async-std = { version = "=1.9.0", features = ["attributes","unstable"] }
futures = "0.3.5"
flume = "0.10"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
serde_json = "1.0"


[[example]]
name = "example-fizz"
crate-type = ["cdylib"]

[[example]]
name = "example-buzz"
crate-type = ["cdylib"]

[[example]]
name = "random-source"
crate-type = ["cdylib"]

[[example]]
name = "counter-source"
crate-type = ["cdylib"]

[[example]]
name = "generic-sink"
crate-type = ["cdylib"]

[[example]]
name = "zenoh-sink"
crate-type = ["cdylib"]

[[example]]
name = "manual-source"
crate-type = ["cdylib"]

[[example]]
name = "sum-and-send"
crate-type = ["cdylib"]

[[example]]
name = "camera-source"
crate-type = ["cdylib"]

[[example]]
name = "face-detection"
crate-type = ["cdylib"]

[[example]]
name = "video-sink"
crate-type = ["cdylib"]

[[example]]
name = "example-select"


[[example]]
name = "video-pipeline"
