[package]
name = "zenoh-flow-examples"
version = "0.1.0"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { path = "../zenoh-flow" }
env_logger = "0.9"
serde = { version = "1.0.55", features = ["derive"] }
opencv = "0.53.0"
async-std = { version = "=1.9.0", features = ["attributes"] }
typetag = "0.1"
log = "0.4"
bincode = "1"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master", default-features = false, features = ["transport_tcp","transport_udp"]  }
uhlc = { git = "https://github.com/atolab/uhlc-rs.git", branch = "master" }

[dev-dependencies]
rand = "0.8.0"
opencv = "0.53.0"
serde = { version = "1.0.55", features = ["derive"] }
async-std = { version = "=1.9.0", features = ["attributes","unstable"] }
futures = "0.3.5"
flume = "0.10"
serde_json = "1.0"


[[example]]
name = "example-fizz"
crate-type = ["cdylib"]

[[example]]
name = "example-buzz"
crate-type = ["cdylib"]

[[example]]
name = "random-source"
crate-type = ["cdylib"]

[[example]]
name = "counter-source"
crate-type = ["cdylib"]

[[example]]
name = "generic-sink"
crate-type = ["cdylib"]

[[example]]
name = "zenoh-sink"
crate-type = ["cdylib"]

[[example]]
name = "manual-source"
crate-type = ["cdylib"]

[[example]]
name = "sum-and-send"
crate-type = ["cdylib"]

[[example]]
name = "camera-source"
crate-type = ["cdylib"]

[[example]]
name = "face-detection"
crate-type = ["cdylib"]

[[example]]
name = "object-detection-dnn"
crate-type = ["cdylib"]

[[example]]
name = "video-sink"
crate-type = ["cdylib"]

[[example]]
name = "example-select"

[[example]]
name = "video-pipeline"

[[example]]
name = "video-file-source"
crate-type = ["cdylib"]

[[example]]
name = "frame-concat"
crate-type = ["cdylib"]